[package]
    name          = "prediction-market"
    version       = "0.1.0"
    edition       = "2021"
    authors       = ["Valentin Golev <v.golev@gmail.com"]
    license       = "MIT OR Apache-2.0"
    repository    = "https://github.com/valyagolev/prediction-market"
    homepage      = "https://github.com/valyagolev/prediction-market"
    documentation = "https://docs.rs/prediction-market/"
    description   = "Prediction market library (implements Maniswap)"
    exclude       = [".github/workflows/*"]

[dependencies]
    serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
    proptest        = "1.2.0"
    proptest-derive = "0.3.0"
